# pind

./: .env.example  .gitignore  .gitmodules  .justfile  .~lock.presentation.odp#  Cargo.toml  README.md  build.rs  dbs.drawio  main.typ  manifest.yaml.template  math-stuff.typ  notes.md  picodata.yaml  presentation.odp  presentation.typ  references.bib  requirements.txt  schemas.drawio  topology.toml
configs/: default.yaml
diploma/: .gitignore  main.typ  math-stuff.typ  other-bs.odt  presentation.odp  schemas.drawio
diploma/bureaucracy/: other-bs.odt  practice-journal.odt
load-testing/: README.md  config.py  locustfile.py
load-testing/configs/: example.yaml
load-testing/results/medium-low-fk-cardinality/: README.md  config.yaml  efficiency.yaml  hist_insert_gsi.csv  hist_insert_lsi.csv  hist_search_gsi.csv  hist_search_lsi.csv  report_insert_gsi.html  report_insert_lsi.html  report_search_gsi.html  report_search_lsi.html  topology.toml
math-model-calculations/: btree.py  config.py  exceptions.py  executor.py  helpers.py  main.ipynb  ping_histogram.py  render_typst.py  replicaset.py  requirements.txt  user.py  wmape.py
math-model-calculations/configs/: example.yaml  huge.yaml  medium.yaml
migrations/: 0001_init.sql
src/: bucket.rs  config.rs  lib.rs  log.rs  metrics.rs  repo.rs  service.rs
src/endpoints/: http.rs  mod.rs  rpc.rs
src/index/: global.rs  mod.rs
src/scrape/: config.rs  metrics.rs  mod.rs  service.rs
src/search/: config.rs  mod.rs  service.rs
topologies/: small.toml
utility-scripts/: calculate_coordinate_time.py
(+58 files in other folders)
