[package]
name = "pind"
version = "0.1.0"
edition = "2024"
publish = false
resolver = "3"

[dependencies]
picodata-plugin = "=25.5.2"
serde = { version = "1", features = ["derive"] }
log = "0.4"
anyhow = "1.0.98"
rmpv = "1.0.0"
shors = "0.12.3"
rmp-serde = "1.0.0"
picotest = "1.8.1"
prometheus = "0.14.0"
chrono = { version = "0.4.43", features = ["serde"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"

[dev-dependencies]
tokio = "1.29.1"
rstest = "0.25.0"
reqwest = { version = "0.12", features = ["blocking"] }

[build-dependencies]
picodata-pike = "3.0.0"

[lib]
crate-type = ["cdylib"]
